# Todo-Test-Tauri

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
Readme files/: README.md
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EmptyState.tsx  FilterBar.tsx  Header.tsx  StatsBar.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
